infra/prod/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aimer-prod
  labels:
    app.kubernetes.io/part-of: aimer
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
